force-app/main/default/objects/Discount_Code__c/Discount_Code__c.object-meta.xml
<CustomObject>
    <description>Discount Codes for Shopify or any other retail platform</description>
    <label>Discount Code</label>
    <nameField>
        <label>Discount Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>