force-app/main/default/objects/Discount_Code__c/fields/Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Redeemed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redeemed</label>
    <type>Checkbox</type>
</CustomField>