force-app/main/default/objects/Discount_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Discount_Amount__c</columns>
    <columns>Discount_Type__c</columns>
    <columns>Redeemed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>